--- a/index.html
+++ b/index.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>CWMAM Search</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
 
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>repl.it</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
-</head>
+  <body>
+    <main>
+      <header class="header">
+        <img class="logo" src="logo.png" alt="Wikipedia Logo" />
 
-<body>
-	<main>
-		<header class="header">
-			<img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Wikipedia-logo-v2.svg/657px-Wikipedia-logo-v2.svg.png" alt="Wikipedia Logo" />
+        <form class="search-form js-search-form">
+          <input
+            placeholder="Type a keyword and press Enter to search"
+            type="search"
+            class="search-input js-search-input"
+            autofocus
+          />
+        </form>
+      </header>
 
-      <form class="search-form js-search-form">
-        <input placeholder="Type a keyword and press Enter to search" type="search" class="search-input js-search-input" autofocus />
-      </form>
-    </header>
-
-    <div class="loading-indicator">
-      <div class="sk-chase js-spinner hidden">
-        <div class="sk-chase-dot"></div>
-        <div class="sk-chase-dot"></div>
-        <div class="sk-chase-dot"></div>
-        <div class="sk-chase-dot"></div>
-        <div class="sk-chase-dot"></div>
-        <div class="sk-chase-dot"></div>
+      <div class="loading-indicator">
+        <div class="sk-chase js-spinner hidden">
+          <div class="sk-chase-dot"></div>
+          <div class="sk-chase-dot"></div>
+          <div class="sk-chase-dot"></div>
+          <div class="sk-chase-dot"></div>
+          <div class="sk-chase-dot"></div>
+          <div class="sk-chase-dot"></div>
+        </div>
       </div>
-    </div>
 
-    <section class="search-results js-search-results"></section>
-  </main>
+      <section class="search-results js-search-results"></section>
+    </main>
 
-  <script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
